...
    return BlocProvider(
      create: (context) => getIt<MyWorkoutsCubit>(param1: _MyWorkoutsNavigatorImpl(context))..loadWorkouts(),
      child: BlocBuilder<MyWorkoutsCubit, MyWorkoutsViewState>(
        builder: (context, state) {
          return Scaffold(
            appBar: AppBar(
              title: const Text('My workouts'),
              backgroundColor: Theme.of(context).colorScheme.inversePrimary,
            ),
            body: Stack(
              children: [
                ScreenContainer(
                  child: Column(
...
                            );
                          },
                        ),
                      ),
                      verticalSpacer,
                      ExpandedRoundButton(
                        label: 'Add workout',
                        onPressed: () => context.read<MyWorkoutsCubit>().onAddWorkoutPressed(),
                      ),
                      bottomScreenSpacer,
                    ],
                  ),
                ),
...
